Fix svg alignment so link underlining doesn't look goofy

--- a/src/components/TextWithIcon/_index.scss
+++ b/src/components/TextWithIcon/_index.scss
@@ -6,7 +6,7 @@
 .oec-text-with-icon__icon {
   height: 1em;
   width: 1em;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .oec-text-with-icon__icon--side-left {
